[package]
name = "game_state_machine"
version = "1.0.0"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"
description = "A stack-based state machine with update functions."
keywords = ["game", "ecs"]
categories = ["game-engines"]
license = "Apache-2.0"
exclude = ["doc"]
repository = "https://github.com/jojolepro/game_state_machine/"

[dependencies]
